--- a/css/style.css
+++ b/css/style.css
@@ -81,7 +81,7 @@ a:hover, a:active {
     position: absolute;
     height: 2px;
     width: 100%;
-    background: black;
+    background: white;
     border-radius: 10px;
     opacity: 1;
     left: 0;
