Centered buttons in My Profile

--- a/css/style.css
+++ b/css/style.css
@@ -76,7 +76,7 @@ a:hover, a:active {
     cursor: pointer;
 }
 
-#center-qwe {
+#center-text {
     display: block;
     margin: auto;
     text-align: center;
