Re centered buttons and fixed footer

--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,12 @@ a:hover, a:active {
     }
 }
 
+#center-text {
+    display: block;
+    margin: auto;
+    text-align: center;
+}
+
 /*
   Hamburger Menu
 ----------------------------------------*/
