--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700');
+@import url('https://fonts.googleapis.com/css?family=Archivo');
+@import url('https://fonts.googleapis.com/css?family=Roboto');
 
 body {
     color: #262626;
@@ -81,7 +83,7 @@ a:hover, a:active {
     position: absolute;
     height: 2px;
     width: 100%;
-    background: black;
+    background:white;
     border-radius: 10px;
     opacity: 1;
     left: 0;
@@ -185,3 +187,284 @@ a:hover, a:active {
     color:white;
 }
 
+/* Search Bar -------------------*/
+.search{
+    margin-top: 20px;
+}
+
+#searchInput{
+    height: 50px;
+    border: 3px solid #00B4CC;
+}
+
+.searchButton{
+  border:solid #00B4CC;
+  background: #00B4CC;
+  color: #fff;
+  cursor:pointer;
+}
+
+.searchButton:hover{
+    color: #262626
+}
+
+input[type="text"].big-dog::-webkit-input-placeholder {
+    color: red;
+  }
+
+
+
+
+/* CATEGORY CSS -------------------------------------*/
+#category{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+    text-align: center
+}
+
+@media(max-width:768px){
+    #categories{
+        display: none;
+    }
+}
+
+.postAdd{
+        margin:auto;
+        display:block;
+}
+
+/* searchForm ----------------------------------*/
+#searchForm{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+}
+
+/*---------------------------------------------*/
+
+#search{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    background-color: #1ABC9C;
+}
+
+.box select{
+    background: #10222e;
+    color: #fff;
+    padding: 10px;
+    width: 285px;
+    height: 50px;
+    border: none;
+    cursor: pointer;
+    margin: auto;
+    
+}
+
+.box{
+    margin:auto;
+    display:block;
+    width: 285px;
+    margin-bottom: 3px;
+}
+
+.form{
+     
+    border-radius: 3px solid white;
+}
+
+#dropdown{
+    text-align: center;
+    font-family:'Roboto', sans-serif;
+}
+
+select {
+    text-align: center;
+    text-align-last: center;
+  }
+
+/*----------------------------*/
+.formHeader{
+    margin:auto;
+    display:block;
+    font-style: 'Roboto', sans-serif;
+}
+
+
+
+/* -------------------------------------------*/
+
+#myFooter {
+    background-color: #182c39;
+    color: white;
+    padding-top: 20px;
+}
+
+
+#map-container {
+    height: 240px;
+    width: 100%;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+#myFooter .row {
+    margin: 0 85px;
+}
+
+#myFooter .footer-copyright {
+    background-color: #10222e;
+    padding-top: 3px;
+    padding-bottom: 3px;
+    text-align: center;
+}
+
+#myFooter .footer-copyright p {
+    margin: 10px;
+    color: #ccc;
+}
+
+#myFooter .container {
+    width: auto;
+}
+
+#myFooter ul {
+    list-style-type: none;
+    padding-left: 0;
+    line-height: 1.7;
+}
+
+#myFooter h5 {
+    font-size: 18px;
+    color: white;
+    font-weight: bold;
+    margin-top: 30px;
+}
+
+#myFooter a {
+    color: #d2d1d1;
+    text-decoration: none;
+}
+
+#myFooter a:hover,
+#myFooter a:focus {
+    text-decoration: none;
+    color: white;
+}
+
+#myFooter .social-networks {
+    text-align: center;
+    padding-top: 30px;
+    padding-bottom: 38px;
+}
+
+#myFooter .fab {
+    font-size: 30px;
+    margin-right: 15px;
+    margin-left: 20px;
+    background-color: white;
+    color: #182c39;
+    border-radius: 51%;
+    padding: 10px;
+    height: 50px;
+    width: 50px;
+    text-align: center;
+    line-height: 31px;
+    text-decoration: none;
+    transition: color 0.5s;
+}
+
+#myFooter .fa-facebook-f:hover {
+    color: #3B5998;
+    transform: rotateY(360deg);
+}
+
+#myFooter .fa-facebook-f:focus {
+    color: #3B5998;
+}
+
+#myFooter .fa-google-plus-g:hover {
+    color: #d34836;
+}
+
+#myFooter .fa-google-plus-g:focus {
+    color: #d34836;
+}
+
+#myFooter .fa-twitter:hover {
+    color: #00aced;
+}
+
+#myFooter .fa-twitter:focus {
+    color: #00aced;
+}
+
+@media screen and (max-width: 767px) {
+    #myFooter {
+        text-align: center;
+    }
+    #myFooter .row {
+        margin: 0;
+    }
+}
+
+
+
+/* CSS used for positioning the footers at the bottom of the page. */
+/* You can remove this. */
+
+html{
+    height: 100%;
+}
+
+body{
+    display: flex;
+    display: -webkit-flex;
+    flex-direction: column;
+    -webkit-flex-direction: column;
+    height: 100%;
+}
+
+.content{
+   flex: 1 0 auto;
+   -webkit-flex: 1 0 auto;
+   min-height: 200px;
+}
+
+#myFooter{
+   flex: 0 0 auto;
+   -webkit-flex: 0 0 auto;
+}
+
+#footersection{
+    margin-bottom: -10px;
+}
+
+/**-------------------------------*/
+#contactForm{
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border: 2px solid white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    color:black;
+    margin-top: -8px;
+}
+
+#contactForm2{
+    background-color: #1ABC9C; 
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19); 
+    color: white;
+}
+
+
+/*----------------------- Youtube button*/
+
+#youtube{
+    margin: auto;
+    display: block;
+    cursor: pointer;
+    padding: 10px;
+    background-color: #ff0000;
+    color: black;
+}
+
+
+/*--------------------------------Privacy */
+#privacy{
+    
+}
