--- a/css/style.css
+++ b/css/style.css
@@ -239,16 +239,13 @@ input[type="text"].big-dog::-webkit-input-placeholder {
 
 /*---------------------------------------------*/
 
-#search{
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    background-color: #1ABC9C;
-}
+
 
 .box select{
     background: #10222e;
     color: #fff;
-    padding: 10px;
-    width: 285px;
+    padding: 15px;
+    width: 250px;
     height: 50px;
     border: none;
     cursor: pointer;
@@ -259,13 +256,20 @@ input[type="text"].big-dog::-webkit-input-placeholder {
 .box{
     margin:auto;
     display:block;
-    width: 285px;
+    width: 250px;
     margin-bottom: 3px;
 }
 
-.form{
+#Form{
+    margin:auto;
+    display:block;
+}
+
+.searchForm{
      
     border-radius: 3px solid white;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    
 }
 
 #dropdown{
@@ -465,6 +469,30 @@ body{
 
 
 /*--------------------------------Privacy */
-#privacy{
-    
-}
+
+#material-button-raised {
+    position: relative;
+    display: inline-block;
+    box-sizing: border-box;
+    margin-top: 4px;
+    border: none;
+    border-radius: 2px;
+    min-width: 64px;
+    height: 36px;
+    vertical-align: middle;
+    text-align: center;
+    text-overflow: ellipsis;
+    text-transform: uppercase;
+    color: #fff;
+    background-color: #21618C;;
+    box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
+    font-family: "Roboto", "Segoe UI", BlinkMacSystemFont, system-ui, -apple-system;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 36px;
+    overflow: hidden;
+    outline: none;
+    cursor: pointer;
+    transition: box-shadow 0.2s;
+  }
+  
