--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,11 @@ img {
     vertical-align: baseline;
 }
 
-
+#center-text {	
+    display: block;	
+    margin: auto;	
+    text-align: center;	
+}
 
 /*--------------------------------------------------------------
 # Links
@@ -238,11 +242,6 @@ input[type="text"].big-dog::-webkit-input-placeholder {
 }
 
 /*---------------------------------------------*/
-<<<<<<< HEAD
-=======
-
-
->>>>>>> vehicleList
 
 .box select{
     background: #10222e;
@@ -480,15 +479,12 @@ body{
    -webkit-flex: 0 0 auto;
 }
 
-<<<<<<< HEAD
 #commonCenter {
     display: block;
     margin:auto;
     text-align : center;  
 }
 
-=======
->>>>>>> vehicleList
 #footersection{
     margin-bottom: -10px;
 }
@@ -549,8 +545,6 @@ body{
     cursor: pointer;
     transition: box-shadow 0.2s;
   }
-<<<<<<< HEAD
-=======
   
 
   /*-------------------Images*/
@@ -561,4 +555,3 @@ body{
     max-height: 200px;
     
   }
->>>>>>> vehicleList
