list page mobile responsive

--- a/css/style.css
+++ b/css/style.css
@@ -408,3 +408,12 @@ body{
     /* color: #e2c909; */
     font-size: 125%;
 }
+body{padding-top:30px;}
+
+.glyphicon {  margin-bottom: 10px;margin-right: 10px;}
+
+small {
+display: block;
+line-height: 1.428571429;
+color: #999;
+}
